--- a/package.json
+++ b/package.json
@@ -10,6 +10,17 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@heroicons/react": "^2.1.1",
+    "@mui/icons-material": "^5.15.2",
+    "@mui/material": "^5.15.2",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@tanstack/react-table": "^8.11.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/express-session": "^1.17.10",
     "axios": "^1.6.2",
@@ -25,9 +36,12 @@
     "mongodb": "^6.3.0",
     "multer": "1.4.5-lts.1",
     "next": "14.0.4",
+    "next-themes": "^0.2.1",
     "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.2",
+    "sharp": "^0.33.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.4.7"
