--- a/package.json
+++ b/package.json
@@ -7,43 +7,56 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "server": "ts-node server.ts"
   },
+  "env": {},
   "dependencies": {
+    "@azure/storage-blob": "^12.17.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.1.1",
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.2",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-table": "^8.11.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express-session": "^1.17.10",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cookie": "^0.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express-session": "^1.17.3",
+    "http": "0.0.1-security",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.300.0",
     "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3",
     "multer": "1.4.5-lts.1",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.7",
+    "papaparse": "^5.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "sharp": "^0.33.1",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
@@ -54,6 +67,7 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
