--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
-    "zustand": "^4.4.7"
+    "zustand": "^4.4.7",
+    "ant-design-icons": "C:\\Users\\fspoo\\Documents\\ant-design-icons"
   },
   "devDependencies": {
     "@types/cookie": "^0.6.0",
@@ -79,4 +80,5 @@
     "ts-jest": "^29.1.1",
     "typescript": "^5"
   }
+  
 }
