feat: Introduce next-auth for authentication and create an api endpoint route to fetch all users

--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint",
     "test": "jest --watch",
     "server": "ts-node server.ts",
-    "migrate:make": "ts-node scripts/migrateMake.ts",
-    "create:migration": "knex migrate:make",
-    "migrate:latest": "knex migrate:latest",
-    "migrate:rollback": "knex migrate:rollback"
+    "create-migration": "knex migrate:make",
+    "make-migration": "ts-node scripts/migrateMake.ts",
+    "push-migration": "knex migrate:latest",
+    "rollback-migration": "knex migrate:rollback",
+    "m-status": "knex migrate:status",
+    "m-list": "knex migrate:list"
   },
   "env": {},
   "dependencies": {
@@ -50,14 +52,14 @@
     "mongoose": "^8.0.3",
     "multer": "1.4.5-lts.1",
     "next": "14.0.4",
-    "next-auth": "5.0.0-beta.4",
+    "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.7",
     "papaparse": "^5.4.1",
     "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.49.2",
+    "react-hook-form": "^7.49.1",
     "sharp": "^0.33.1",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
