--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@heroicons/react": "^2.1.1",
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.2",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
