--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "push-migration": "knex migrate:latest",
     "rollback-migration": "knex migrate:rollback",
     "m-status": "knex migrate:status",
-    "m-list": "knex migrate:list"
+    "m-list": "knex migrate:list",
+    "create-schema": "ts-node scripts/usersSchema.ts"
   },
   "env": {},
   "dependencies": {
@@ -90,5 +91,9 @@
     "tailwindcss": "^3.3.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": "20.10.0"
   }
+  
 }
