--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.1.1",
+    "@hookform/resolvers": "^3.3.4",
+    "@lordicon/react": "^1.4.1",
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.2",
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -37,6 +39,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express-session": "^1.17.10",
+    "@types/react-transition-group": "^4.4.10",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -48,6 +51,7 @@
     "http": "0.0.1-security",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.300.0",
     "moment": "^2.30.1",
     "mongodb": "^6.3.0",
@@ -62,15 +66,19 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.1",
+    "react-transition-group": "^4.4.5",
     "sharp": "^0.33.1",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
+    "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^14.1.2",
     "@types/cookie": "^0.6.0",
     "@types/jest": "^29.5.11",
     "@types/js-cookie": "^3.0.6",
@@ -86,6 +94,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "knex": "^3.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
@@ -95,5 +104,4 @@
   "engines": {
     "node": "20.10.0"
   }
-  
 }
