--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "rollback-migration": "knex migrate:rollback",
     "m-status": "knex migrate:status",
     "m-list": "knex migrate:list",
-    "create-schema": "ts-node scripts/usersSchema.ts"
+    "create-schema": "ts-node scripts/usersSchema.ts",
+    "seed": "node -r dotenv/config ./scripts/seed.ts"
   },
   "env": {},
   "dependencies": {
@@ -35,20 +36,24 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-table": "^8.11.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express-session": "^1.17.10",
     "@types/react-transition-group": "^4.4.10",
+    "ag-grid-react": "^31.2.0",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cookie": "^0.6.0",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.3.1",
     "express-session": "^1.17.3",
     "http": "0.0.1-security",
+    "iron-session": "^8.0.1",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.0",
@@ -57,7 +62,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "multer": "1.4.5-lts.1",
-    "next": "14.0.4",
+    "next": "14.1.4",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.7",
@@ -66,6 +71,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.1",
+    "react-server-dom-webpack": "^0.0.1",
     "react-transition-group": "^4.4.5",
     "sharp": "^0.33.1",
     "socket.io": "^4.7.2",
@@ -73,6 +79,7 @@
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
+    "winston": "^3.13.0",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
