--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch",
+    "test": "jest",
+    "test:watch": "jest --watchAll",
     "server": "ts-node server.ts",
     "create-migration": "knex migrate:make",
     "make-migration": "ts-node scripts/migrateMake.ts",
@@ -89,6 +90,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.2",
     "@types/cookie": "^0.6.0",
     "@types/jest": "^29.5.11",
     "@types/js-cookie": "^3.0.6",
@@ -103,6 +105,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "knex": "^3.1.0",
