--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.1.1",
     "@react-hook/window-size": "^3.1.1",
     "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-table": "^8.11.2",
@@ -85,6 +86,7 @@
     "react-charts": "3.0.0-beta.57",
     "react-dom": "^18",
     "react-hook-form": "^7.49.1",
+    "react-icons": "^5.2.1",
     "react-images-uploading": "^3.1.7",
     "react-resizable": "^3.0.5",
     "react-server-dom-webpack": "^0.0.1",
