--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.2",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@nextui-org/react": "^2.4.2",
+    "@nextui-org/skeleton": "^2.0.29",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -62,6 +64,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.3.1",
     "express-session": "^1.17.3",
+    "framer-motion": "^11.2.11",
     "gsap": "^3.12.5",
     "http": "0.0.1-security",
     "ioredis": "^5.4.1",
@@ -70,6 +73,7 @@
     "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.300.0",
+    "react-responsive": "^10.0.0",
     "moment": "^2.30.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
@@ -81,11 +85,11 @@
     "nodemailer": "^6.9.7",
     "papaparse": "^5.4.1",
     "pg": "^8.11.3",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-charts": "3.0.0-beta.57",
-    "react-dom": "^18",
-    "react-hook-form": "^7.49.1",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-icons": "^5.2.1",
     "react-images-uploading": "^3.1.7",
     "react-resizable": "^3.0.5",
@@ -113,24 +117,24 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/mongodb": "^4.0.7",
     "@types/multer": "^1.4.11",
-    "@types/node": "^20",
+    "@types/node": "^20.10.5",
     "@types/nodemailer": "^6.4.14",
     "@types/papaparse": "^5.3.14",
     "@types/pg": "^8.10.9",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
     "@types/uuid": "^9.0.8",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "knex": "^3.1.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
     "ts-jest": "^29.1.1",
-    "typescript": "^5"
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": "20.10.0"
