--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
@@ -73,7 +74,6 @@
     "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.300.0",
-    "react-responsive": "^10.0.0",
     "moment": "^2.30.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
@@ -93,6 +93,7 @@
     "react-icons": "^5.2.1",
     "react-images-uploading": "^3.1.7",
     "react-resizable": "^3.0.5",
+    "react-responsive": "^10.0.0",
     "react-server-dom-webpack": "^0.0.1",
     "react-transition-group": "^4.4.5",
     "recharts": "^2.12.6",
@@ -108,6 +109,7 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.3.1",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
