--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lottie-react": "^2.4.0",
+    "lucia": "^3.2.0",
     "lucide-react": "^0.300.0",
     "moment": "^2.30.1",
     "mongodb": "^6.3.0",
