--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "sharp": "^0.33.1",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
+    "styled-components": "^6.1.11",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
